@@ -40,3 +40,37 @@ int32_t SPVM__Net__SSLeay__OBJ__txt2nid(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   return 0;
 }
+
+int32_t SPVM__Net__SSLeay__OBJ__nid2obj(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  int32_t n = stack[0].ival;
+  
+  ASN1_OBJECT* oid = OBJ_nid2obj(n);
+  
+  void* obj_address_oid = env->new_pointer_object_by_name(env, stack, "Address", oid, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  stack[0].oval = obj_address_oid;
+  env->call_class_method_by_name(env, stack, "Net::SSLeay::ASN1_OBJECT", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);  
+  if (error_id) { return error_id; }
+  void* obj_oid = stack[0].oval;
+  env->set_no_free(env, stack, obj_oid, 1);
+  
+  stack[0].oval = obj_oid;
+  
+  return 0;
+}
+
+int32_t SPVM__Net__SSLeay__OBJ__obj2nid(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  ASN1_OBJECT* o = stack[0].oval;
+  
+  int32_t nid = OBJ_obj2nid(o);
+  
+  stack[0].ival = nid;
+  
+  return 0;
+}
