@@ -12,6 +12,8 @@ class TestCase::Net::SSLeay {
   use Sys::Signal::Constant as SIGNAL;
   use Net::SSLeay::Error;
   
+  use Net::SSLeay::OBJ;
+  
   static method test : int () {
     
     my $version = SSL->OPENSSL_VERSION_TEXT;
